# booker_app

./: Dockerfile  Makefile  README.md  main.py  mypy.ini  pyproject.toml
delivery/api/v1/: create_one_subscription_router.py  delete_one_subscription_router.py  find_all_subscriptions_router.py  find_one_subscription_router.py  sync_subscriptions_router.py
domain/: book.py  book_searcher.py  client_notifier.py
domain/command/: command_handler.py
domain/query/: query.py  query_handler.py  query_response.py
domain/subscriptions/: subscription.py  subscriptions_repository.py
infrastructure/notifier/: client_notifier_factory.py  console_client_notifier.py  email_client_notifier.py
infrastructure/search/: http_book_searcher.py
infrastructure/subscriptions/: json_subscriptions_repository.py  mysql_subscription_repository.py
tests/acceptance/delivery/: test_create_and_delete_one_subscription.py
tests/integration/infrastructure/: test_http_book_searcher.py  test_json_subscription_repository.py  test_mysql_subscriptions_repository.py
tests/unit/uses_cases/commands/: test_create_one_subscription_command_handler.py  test_delete_one_subscription_command_handler.py  test_notify_new_books_command_handler.py  test_sync_subscriptions_command_handler.py
tests/unit/uses_cases/queries/: test_find_all_subscriptions_query_handler.py  (+1 more)
use_cases/commands/: create_one_subscription_command.py  delete_one_subscription_command.py  notify_new_books_command.py  sync_subscriptions_command.py
use_cases/queries/: find_all_subscriptions_query.py  find_one_subscription_query.py
