[tool.poetry]
name = "booker"
version = "0.1.0"
description = "Book subscriber to detect new books published in Spain"
authors = ["Pedro Lopez Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = {extras = ["all"], version = "^0.89.1"}
fastapi-utils = "^0.2.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-dotenv = "^0.21.0"
mysqlclient = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
toml = "^0.10.2"
mypy = "^0.971"
ruff = "^0.0.220"
pyupgrade = "^3.3.1"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
doublex = { git = "https://github.com/davidvilla/python-doublex", rev = "0ccbe65c8574169d8b723c1ef29bcbe3f2e98c20" }
doublex-expects = "^0.7.1"
expects = "^0.9.0"

[tool.pyright]
venvPath="/home/pmareke/.cache/pypoetry/virtualenvs"
venv="booker-G7jlWEtj-py3.10"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
